--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Lai"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : #"Short biography for the left-hand sidebar"
+  location         : "China"
   employer         : "Red Brick University"
-  uri              : # URL
+  uri              : https://zhiyuanlai001.github.io
   email            : "none@example.org" 
 
   # Academic websites
